--- a/Framework/BuildingBlocks/Resources/ErrorMessages.resx
+++ b/Framework/BuildingBlocks/Resources/ErrorMessages.resx
@@ -127,7 +127,7 @@
     <value>{member.FullName} ({member.Value}) must not be null and contain at least one element.</value>
   </data>
   <data name="CollectionConstraints_ElementAt" xml:space="preserve">
-    <value>{member.FullName} ({member.Value.Count} item(s)) contains no element at index {constraint.Index}.</value>
+    <value>{member.FullName} ({member.Value.Count} item(s)) contains no element at {constraint.Indices}.</value>
   </data>
   <data name="CollectionConstraints_IsNullOrEmpty" xml:space="preserve">
     <value>{member.FullName} ({member.Value.Count} item(s)) must be null or empty.</value>
@@ -256,7 +256,7 @@
     <value>{member.FullName} ({member.Value}) must start with '{constraint.Prefix}'.</value>
   </data>
   <data name="CollectionConstraints_NoElementAt" xml:space="preserve">
-    <value>{member.FullName} ({member.Value.Count} item(s)) does contain an element index {constraint.Index}.</value>
+    <value>{member.FullName} ({member.Value.Count} item(s)) does contain an element at {constraint.Indices}.</value>
   </data>
   <data name="StringConstraints_IsIdentifier" xml:space="preserve">
     <value>{member.FullName} ({member.Value}) could not be converted to an identifier.</value>
@@ -269,11 +269,5 @@
   </data>
   <data name="EnumConstraints_IsInRangeOfValidValues" xml:space="preserve">
     <value>{member.FullName} ({member.Value}) has a value or contains bitflags that are not defined by type {constraint.EnumType.Name}.</value>
-  </data>
-  <data name="CollectionConstraints_ElementAt_Dictionary" xml:space="preserve">
-    <value>{member.FullName} ({member.Value.Count} item(s)) contains no element with key '{constraint.Key}'.</value>
-  </data>
-  <data name="CollectionConstraints_NoElementAt_Dictionary" xml:space="preserve">
-    <value>{member.FullName} ({member.Value.Count} item(s)) does contain an element with key '{constraint.Key}'.</value>
   </data>
 </root>
