--- a/Framework/BuildingBlocks/Resources/ExceptionMessages.resx
+++ b/Framework/BuildingBlocks/Resources/ExceptionMessages.resx
@@ -132,14 +132,17 @@
   <data name="HasItemFilter_IndexerNotFound" xml:space="preserve">
     <value>Instance of type '{0}' does not contain an indexer with argument types '[{1}]'.</value>
   </data>
+  <data name="HasItemFilter_InvalidArrayIndexValues" xml:space="preserve">
+    <value>The specified values are not valid to index an array: {0}.</value>
+  </data>
   <data name="Identifier_EmptyIdentifier" xml:space="preserve">
     <value>Cannot create an empty identifier.</value>
   </data>
   <data name="Identifier_InvalidIdentifier" xml:space="preserve">
     <value>Invalid identifier specified: '{0}'.</value>
   </data>
-  <data name="IndexList_EmptyList" xml:space="preserve">
-    <value>The specified list of indices cannot be empty.</value>
+  <data name="MemberExpressionSplitter_ExpressionNotSupported" xml:space="preserve">
+    <value>The specified expression is not supported: '{0}'.</value>
   </data>
   <data name="Message_AmbiguousAttributeMatch" xml:space="preserve">
     <value>Two or more attributes declared on message '{0}' are assignable to '{1}'.</value>
