Added support for merging ErrorInfo and Validator instances.

--- a/BuildingBlocks/Resources/ErrorMessages.resx
+++ b/BuildingBlocks/Resources/ErrorMessages.resx
@@ -124,7 +124,7 @@
     <value>{member} (false) must be true.</value>
   </data>
   <data name="CollectionConstraints_IsNotNullOrEmpty" xml:space="preserve">
-    <value>{member} ({member.Value}) must not be null and contain at least one element.</value>
+    <value>{member} must not be null and contain at least one element.</value>
   </data>
   <data name="CollectionConstraints_HasItem" xml:space="preserve">
     <value>{member} ({member.Value.Count} item(s)) contains no element at key or index {constraint.IndexList}.</value>
