--- a/Kingo.Server.TestEngine/Resources/ExceptionMessages.resx
+++ b/Kingo.Server.TestEngine/Resources/ExceptionMessages.resx
@@ -132,6 +132,9 @@
   <data name="Scenario_InvalidEventCount" xml:space="preserve">
     <value>Invalid event count specified: {0}. Number must be 0 or higher.</value>
   </data>
+  <data name="Scenario_InvalidMode" xml:space="preserve">
+    <value>Invalid mode has been set for scenario '{0}': {1}.</value>
+  </data>
   <data name="Scenario_NegativeIndex" xml:space="preserve">
     <value>Index cannot be negative: {0}.</value>
   </data>
